syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "com.salesforce.rxgrpc";
option java_outer_classname = "HelloWorldProto";

// The greeting service definition.
service Greeter {
    // Sends a greeting
    rpc SayHello (HelloRequest) returns (HelloResponse) {}
    rpc SayHelloRespStream (HelloRequest) returns (stream HelloResponse) {}
    rpc SayHelloReqStream (stream HelloRequest) returns (HelloResponse) {}
    rpc SayHelloBothStream (stream HelloRequest) returns (stream HelloResponse) {}
}

service Keywords {
    rpc Boolean (BoolRequest) returns (BoolResponse) {}
}

service Dismisser {
    rpc SayGoodbye (HelloRequest) returns (HelloResponse) {}
}

// The request message containing the user's name.
message HelloRequest {
    string name = 1;
}

// The response message containing the greetings
message HelloResponse {
    string message = 1;
}

message BoolRequest {
    bool value = 1;
}

message BoolResponse {
    bool value = 1;
}
